[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-masked-print"
version = "0.1.5"
description = "Automatically mask sensitive values (API keys, passwords, tokens) in logs and print output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["mask", "sensitive", "security", "logging", "secrets", "redact"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-masked-print#readme"
Repository = "https://github.com/philiprehberger/py-masked-print"
Issues = "https://github.com/philiprehberger/py-masked-print/issues"
Changelog = "https://github.com/philiprehberger/py-masked-print/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_masked_print"]
